--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -5,3 +5,6 @@ RewriteRule ^[^.]*$ index\.php
 ErrorDocument 404 /
 
 AddDefaultCharset utf-8
+
+php_flag log_errors on
+php_value error_log ../runtime/logs/php-errors.log
